deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pamv1
  labels:
    app.kubernetes.io/name: PAMv1
    pod-security.kubernetes.io/enforce: restricted
