deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pam-server
  namespace: pamv1
  labels:
    app.kubernetes.io/name: PAMv1
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: PAMv1
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: ssh
      port: 2222
      targetPort: ssh
